:bug: squished; corrected topbar mobile view

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -25,6 +25,7 @@
     .left {
       display: flex;
       align-items: center;
+      justify-content: center;
 
       @include mobile {
         height: 50px;
@@ -35,6 +36,10 @@
 
       .socials{
         margin: 0 15px 0 0px;
+
+        @include mobile{
+          display: none;
+        }
       }
 
       a{
@@ -43,6 +48,7 @@
       }
 
       .logo {
+        position:fixed;
         font-size: 40px;
         font-weight: 700;
         text-decoration: none;
@@ -75,6 +81,8 @@
         display: flex;
         align-items: center;
         margin-left: 30px;
+        justify-content:space-evenly;
+        align-items: center;
 
         .icon {
           font-size: 35px;
